// ArchVentures — esquema simplificado para la demo/MVP
// PostgreSQL / dbdiagram.io
// Decisión central: la plantilla se copia al expediente (sin FK) y el expediente
// copia su checklist personalizado a cada visita. Una visita tiene 1 informe editable.

Enum estado_visita {
  BORRADOR
  EN_CAMPO
  EN_REVISION
  FINALIZADA
  ARCHIVADA
}

Enum estado_grupo_captura {
  ABIERTO
  GRABANDO
  PENDIENTE_CONFIRMACION
  CONFIRMADO
}

Enum estado_documento {
  BORRADOR
  GENERADO
}

Enum tipo_archivo {
  IMAGEN
  AUDIO
  DOCUMENTO
  PDF
}

Enum estado_sincronizacion {
  LOCAL
  PENDIENTE
  SINCRONIZADO
  ERROR
}

Enum tipo_adjunto {
  CUADERNO_OBRA
  POLIZA
  PLANO
  ACTA
  OTRO
}

// Cuenta del arquitecto/inspector que utiliza la plataforma.
Table Profesional {
  id uuid [pk]
  nombre_completo varchar [not null]
  email varchar [not null, unique]
  nro_colegiatura varchar
  cargo varchar
  firma_archivo_id uuid [note: 'Firma predeterminada opcional del usuario']
  activo boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// Registro único para fotos, audios, firmas, anexos y PDF generado.
// El mismo UUID se crea localmente para permitir captura sin conexión.
Table Archivo {
  id uuid [pk]
  profesional_id uuid [not null]
  tipo tipo_archivo [not null]
  local_uri varchar [note: 'Ruta temporal en el dispositivo mientras trabaja offline']
  storage_key varchar [unique, note: 'Null hasta que el archivo se sincronice con la nube']
  nombre_original varchar
  mime_type varchar [not null]
  tamanio_bytes bigint
  checksum_sha256 varchar
  estado_sincronizacion estado_sincronizacion [not null, default: 'LOCAL']
  created_at timestamp [not null]
  sincronizado_at timestamp
}

// Catálogo de formularios reutilizables. Al elegir una plantilla se copia su JSON
// al expediente; no queda ninguna relación entre el expediente y esta tabla.
Table Plantilla_Checklist {
  id uuid [pk]
  profesional_id uuid [note: 'Null cuando es una plantilla proporcionada por la plataforma']
  codigo varchar [not null]
  nombre varchar [not null]
  version integer [not null]
  esquema_json jsonb [not null, note: 'Secciones, checks, inputs, opciones, observaciones y reglas básicas de renderizado']
  activa boolean [not null, default: true]
  created_at timestamp [not null]

  indexes {
    (profesional_id, codigo, version) [unique]
  }
}

// Caso/obra persistente. Sus datos alimentan la cabecera de todas sus visitas.
Table Expediente {
  id uuid [pk]
  profesional_id uuid [not null, note: 'Dueño del expediente']
  nro_expediente varchar [not null]
  nro_licencia varchar
  modalidad varchar
  entidad_destinataria varchar [note: 'Municipalidad, subgerencia u otra entidad receptora']
  fecha_emision_licencia date
  vigencia_desde date
  vigencia_hasta date
  propietario varchar
  ubicacion varchar [not null]
  distrito varchar
  provincia varchar
  departamento varchar
  tipo_obra varchar
  uso_predio varchar
  detalle_obra text
  valor_obra decimal
  total_visitas_programadas integer
  responsable_obra_nombre varchar [note: 'Valor predeterminado; una visita puede reemplazarlo']
  responsable_obra_colegiatura varchar
  poliza_car_json jsonb [note: 'Número, compañía, vigencia y otros datos variables de la póliza CAR']
  datos_cabecera_extra jsonb [note: 'Campos particulares de una municipalidad o formato']

  checklist_nombre varchar [not null, note: 'Nombre copiado desde el catálogo y editable para este expediente']
  checklist_esquema_json jsonb [not null, note: 'Copia independiente y personalizable; no enlazada con Plantilla_Checklist']

  activo boolean [not null, default: true]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (profesional_id, nro_expediente) [unique]
  }
}

// La visita engloba también su único informe editable.
// checklist_respuestas_json es la instancia rellenada de la plantilla del expediente.
// documento_json es el state-tree de bloques estilo Colab.
Table Visita {
  id uuid [pk]
  expediente_id uuid [not null]
  nro_visita integer [not null]
  codigo_informe varchar [note: 'Código impreso, p. ej. 6-2026-VERC/MDLM']
  fecha date [not null]
  hora_inicio timestamp
  hora_fin timestamp
  estado estado_visita [not null, default: 'BORRADOR']

  checklist_nombre varchar [not null, note: 'Copia del nombre configurado en el expediente al crear la visita']
  checklist_esquema_json jsonb [not null, note: 'Snapshot del esquema personalizado del expediente']
  checklist_respuestas_json jsonb [not null, note: 'Respuestas compatibles con el esquema copiado en esta visita']
  checklist_completado boolean [not null, default: false]

  avance_general decimal
  nivel_riesgo varchar
  calificacion varchar [note: 'Por ejemplo: CONFORME u OBSERVADO']
  responsable_obra_nombre varchar [note: 'Override/snapshot si cambió respecto al expediente']
  responsable_obra_colegiatura varchar
  fecha_entrega_residente date
  asiento_cuaderno_obra varchar
  proxima_visita_fecha date

  conclusiones_texto text [note: 'Texto final editable, escrito o corregido después de transcribir']
  conclusiones_transcripcion text [note: 'Transcripción original del audio de conclusiones']
  conclusiones_audio_archivo_id uuid

  documento_json jsonb [not null, note: 'Lista ordenada de bloques: cabecera, checklist, grupos, conclusiones, adjuntos y firmas']
  estado_documento estado_documento [not null, default: 'BORRADOR']
  pdf_archivo_id uuid [note: 'Último PDF generado; puede regenerarse después de editar']
  generado_at timestamp

  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (expediente_id, nro_visita) [unique]
  }
}

// El comentario de voz confirma y delimita un grupo de fotos.
Table Grupo_Captura {
  id uuid [pk]
  visita_id uuid [not null]
  orden integer [not null]
  estado estado_grupo_captura [not null, default: 'ABIERTO']
  audio_archivo_id uuid
  transcripcion_parcial text [note: 'Texto mostrado mientras se habla']
  transcripcion_original text [note: 'Resultado final de la transcripción local']
  comentario_editado text [note: 'Versión corregida por el usuario; no destruye la transcripción original']
  audio_duracion_ms integer
  iniciado_at timestamp [not null]
  confirmado_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (visita_id, orden) [unique]
  }
}

// La foto pertenece siempre a una visita. grupo_captura_id permanece null
// mientras está en la pila de fotos pendientes y se asigna al confirmar el audio.
Table Foto {
  id uuid [pk]
  visita_id uuid [not null]
  grupo_captura_id uuid
  archivo_id uuid [not null, unique]
  orden_captura integer [not null]
  orden_en_grupo integer
  hash_perceptual varchar [note: 'Permite sugerir fotos casi iguales dentro del mismo grupo']
  seleccionada_para_informe boolean [not null, default: true]
  capturada_at timestamp [not null]
  latitud decimal
  longitud decimal
  created_at timestamp [not null]

  indexes {
    (visita_id, orden_captura) [unique]
    (grupo_captura_id, orden_en_grupo) [unique]
  }
}

// Personas que aparecen en el pie de firma. Pueden tener imagen o firmar en papel.
Table Firmante_Visita {
  id uuid [pk]
  visita_id uuid [not null]
  profesional_id uuid [note: 'Opcional; normalmente el inspector usuario de la plataforma']
  firma_archivo_id uuid [note: 'Null deja el espacio de firma vacío en el PDF']
  rol varchar [not null, note: 'INSPECTOR, RESIDENTE, RESPONSABLE_OBRA u otro']
  nombre_impreso varchar [not null]
  cargo_impreso varchar
  colegiatura_impresa varchar
  orden integer [not null]
  repetir_en_pie_pagina boolean [not null, default: true]
  created_at timestamp [not null]

  indexes {
    (visita_id, orden) [unique]
  }
}

// Documento soporte. Si visita_id es null, pertenece al expediente y puede
// reutilizarse en varias visitas (p. ej. póliza o planos). Si tiene visita_id,
// es propio de esa visita (p. ej. foto del cuaderno de obra de ese día).
Table Adjunto {
  id uuid [pk]
  expediente_id uuid [not null]
  visita_id uuid
  archivo_id uuid [not null]
  tipo tipo_adjunto [not null]
  titulo varchar [not null]
  descripcion text
  orden integer [not null]
  incluir_en_informe boolean [not null, default: true]
  created_at timestamp [not null]
}

Ref: Profesional.firma_archivo_id > Archivo.id
Ref: Archivo.profesional_id > Profesional.id

Ref: Plantilla_Checklist.profesional_id > Profesional.id
Ref: Expediente.profesional_id > Profesional.id

Ref: Visita.expediente_id > Expediente.id
Ref: Visita.conclusiones_audio_archivo_id > Archivo.id
Ref: Visita.pdf_archivo_id > Archivo.id

Ref: Grupo_Captura.visita_id > Visita.id
Ref: Grupo_Captura.audio_archivo_id > Archivo.id

Ref: Foto.visita_id > Visita.id
Ref: Foto.grupo_captura_id > Grupo_Captura.id
Ref: Foto.archivo_id > Archivo.id

Ref: Firmante_Visita.visita_id > Visita.id
Ref: Firmante_Visita.profesional_id > Profesional.id
Ref: Firmante_Visita.firma_archivo_id > Archivo.id

Ref: Adjunto.expediente_id > Expediente.id
Ref: Adjunto.visita_id > Visita.id
Ref: Adjunto.archivo_id > Archivo.id
